# comet

./: .env.example  .gitignore  Dockerfile  FEATURES.md  LICENCE  LICENSE  README.md  analysis_messages_20250511_143402_20250511_153316.md  check_actual_code_blocks.py  debug_rss.py  debug_rss_structure.py  full_rank_guide.md  holodex_stream_notifier_spec.md  hololive_members_complete.json  main.py  messages_20250511_143402.json  old_bot_code.py  pyproject.toml  pytest.ini  requirements.txt  roles_1092138492173242430.json  setup.py  test.py
.github/: dependabot.yml
.github/workflows/: ai-review.yaml  comprehensive-test.yml  create-release.yml  deploy.yml  deploy_to_main.yml  discord-notify-deploy.yml  enhanced-static-analysis.yml  project-structure.yml  static-analysis.yml  test.yml
api/: __init__.py  main.py
api/routers/: aus.py  checkpoint.py  database.py  features.py  manage.py  rank.py  settings.py  stream.py  voice.py
cogs/aus/: README.md  __init__.py  artist_verification.py  database.py  image_detection.py  moderation.py
cogs/cp/: __init__.py  cp_commands.py  db.py  error_handler.py  event_logging.py  models.py  stats.py
cogs/events/: banner_sync.py  guild_watcher.py
cogs/homepage/: members_card.py  server_analyzer.py  staff_manager.py  website_integration.py
cogs/linked_roles/: __init__.py  linked_roles.py
cogs/logs/: attachmentlog.py  automod.py  ban.py  channel.py  join_remove.py  kick.py  message_delete.py  message_edit.py  nickname.py  role.py  setup.py  timeout.py  voice.py
cogs/manage/: anonymous_dm.py  auto_purge.py  channel_mute_system.py  check_ai_contents.py  db_migration_commands.py  earthquake_channel.py  event_logger.py  help.py  manage_bot.py  manage_cogs.py  sentry.py  spam_blocker.py  statusmanager.py  tag_moderation.py  user_warning_system.py
cogs/manege/: forword_check.py  help.py  manege_bot.py  manege_cogs.py  moderation.py  process_info.py  sentry.py  spam_blocker.py  statusmanager.py
cogs/note/: hfs_voices.py  note_notice.py
cogs/rank/: __init__.py  logging.py  models.py  ranking.py  service.py  spec.md
cogs/report/: report_message.py  report_user.py  settings.py  setup.py
cogs/stream/: __init__.py  channel_manager.py  constants.py  holodex.py  live_notification.py  stream_notifier.py  upcoming.py
cogs/tool/: announcement_new.py  auto_reaction.py  bug.py  bump_notice.py  custom_announcement.py  cv2_test.py  dell.py  display_name_style.py  game.py  github.py  giveaway.py  grokcord.py  info.py  jisho.py  ms_ana.py  newcomer_followup.py  notice_mod.py  omikuji.py  oshi_role_panel.py  pin_message.py  recorder.py  remider.py  reminder.py  rm_form.py  scheduled_post.py  season_icon.py  send_first_message_to_faq.py  server_stats.py  server_tag.py  soundboard.py  sudo.py  tubuyaki_message.py  user_analyzer.py  vc_notic.py  welcom_message.py
cogs/uptimekuma/: gizmc_status.py  status.py
cogs/voice/: __init__.py  db.py  models.py  recording.py
cogs_dev/: oshi_role_panel_before.py  season_icon.py
cogs_dev/fun/: tariff.py
cogs_dev/logs/: ban.py  join_remove.py  kick.py  message_delete.py  setup.py  timeout.py  voice.py
cogs_dev/manage/: bot_moniter.py  monitor_bot.py
cogs_dev/report/: report_message.py
cogs_dev/tool/: ai_rules.py  jisho.py  latex.py  notice_mod.py  reminder.py  (+2 more)
config/: auth.json  bot.json  bot.json.example  members.json  setting.py  spam_blocker.json.example  version.json
debug/: cv2_payload_debug.json
migrations/: 0000_placeholder.sql  009_create_hololive_omikuji_tables.sql  011_create_rank_tables.sql  add_animated_column_to_role_emoji_mappings.sql  add_note_posts_image_fields.sql  create_achievements_system.sql  create_aus_tables.sql  create_banned_server_tags_tables.sql  create_level_configs.sql  create_level_formulas.sql  create_quality_cache.sql  create_server_tag_tables.sql  create_user_warning_system_tables.sql  create_voice_system.sql
rank/: __init__.py  achievements.py  formula_config.py  rank.py  rank_config.py  voice_config.py  voice_tracker.py
scripts/: validate-wiki.py
tests/: __init__.py  conftest.py
utils/: api.py  auth.py  commands_help.py  components_v2.py  cv2.py  database.py  db_manager.py  db_migration.py  error.py  github_issue.py  logging.py  presence.py  spam_blocker.py  startup.py  startup_create.py  startup_status.py  stats.py  tag_moderation_db.py
wiki/: README.md
(+79 files in other folders)
